<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_activity.EditActivity">

    <Button
        android:id="@+id/edit_transaction_closeBTN"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_action_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="bottom"
        android:text="@string/edit"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_transaction_closeBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_transaction_closeBTN"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/edit_transaction_checkBTN"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="?secondaryElementColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_action_check"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/edit_transaction_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/price_edittext_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_transaction_amount_edittext"
        app:layout_constraintEnd_toStartOf="@+id/edit_transaction_amount_edittext"
        app:layout_constraintStart_toStartOf="@+id/edit_transaction_checkBTN"
        app:layout_constraintTop_toTopOf="@+id/edit_transaction_amount_edittext" />

    <EditText
        android:id="@+id/edit_transaction_amount_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_round_border"
        android:ems="8"
        android:hint="@string/price_edittext_hintText"
        android:inputType="number"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_transaction_checkBTN"
        app:layout_constraintEnd_toEndOf="@+id/edit_transaction_checkBTN"
        app:layout_constraintTop_toBottomOf="@+id/edit_transaction_name_edittext" />

    <TextView
        android:id="@+id/edit_transaction_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/name_edittext_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_transaction_name_edittext"
        app:layout_constraintEnd_toStartOf="@+id/edit_transaction_name_edittext"
        app:layout_constraintStart_toStartOf="@+id/edit_transaction_checkBTN"
        app:layout_constraintTop_toTopOf="@+id/edit_transaction_name_edittext" />

    <EditText
        android:id="@+id/edit_transaction_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_round_border"
        android:ems="8"
        android:hint="@string/name_edittext_hintText"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/edit_transaction_closeBTN"
        app:layout_constraintBottom_toTopOf="@+id/edit_transaction_amount_edittext"
        app:layout_constraintEnd_toEndOf="@+id/edit_transaction_checkBTN" />

</androidx.constraintlayout.widget.ConstraintLayout>