<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="?secondaryElementColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_action_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/add_transaction_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/price_edittext_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_transaction_price_edittext"
        app:layout_constraintEnd_toStartOf="@+id/add_transaction_price_edittext"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/add_transaction_price_edittext" />

    <EditText
        android:id="@+id/add_transaction_price_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:ems="8"
        android:inputType="number"
        android:paddingVertical="10dp"
        android:hint="@string/price_edittext_hintText"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/add_transaction_name_edittext"
        android:background="@drawable/edittext_round_border"/>

    <TextView
        android:id="@+id/add_transaction_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/name_edittext_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_transaction_name_edittext"
        app:layout_constraintEnd_toStartOf="@+id/add_transaction_name_edittext"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/add_transaction_name_edittext" />

    <EditText
        android:id="@+id/add_transaction_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:textSize="25sp"
        android:hint="@string/name_edittext_hintText"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/add_transaction_price_edittext"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/edittext_round_border"/>

</androidx.constraintlayout.widget.ConstraintLayout>